--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>animaciones</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <header>
+        <div class="navbar">
+            <ul>
+                <li class="selected">mia<a href="#"></a></li>
+                <li><a href="#">pagina </a></li>
+                <li><a href="#">pagina </a></li>
+                <li><a href="#">pagina</a></li>
+            </ul>
+        </div>
+    </header>
+    <section>
+        <div class="animattion">
+        </div>
+    </section>
+    <footer>
+        Nicolas Ramos Bohorquez
+    </footer>
+</body>
+
+</html>
