cambio orden navbar

--- a/pagina-nicolas.html
+++ b/pagina-nicolas.html
@@ -14,9 +14,9 @@
         <div class="navbar">
             <ul>
                 <li class="selected">mia<a href="#"></a></li>
-                <li><a href="#">pagina </a></li>
-                <li><a href="#">pagina </a></li>
-                <li><a href="#">pagina</a></li>
+                <li><a href="#">pagina Santiago </a></li>
+                <li><a href="#">pagina claudia</a></li>
+                <li><a href="#">pagina mario</a></li>
             </ul>
         </div>
     </header>
