Orden de los li

--- a/página_santiago.html
+++ b/página_santiago.html
@@ -15,13 +15,13 @@
         <nav class="nav-bar">
         <ul id="button">
             <li>
-                <a class="active" href="#home">Home</a>
+                <a class="active" href="#home">Index</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="#">Página Santiago</a>
             </li>
-            <li><a href="#">Texto</a></li>
-            <li><a href="#">Texto</a></li>
+            <li><a href="#">Página Claudia</a></li>
+            <li><a href="#">Pàgina Mario</a></li>
         </ul>
     </nav>
     </header>
