Orden de los li en navbar

--- a/página_santiago.html
+++ b/página_santiago.html
@@ -21,7 +21,7 @@
                 <a href="#">Página Santiago</a>
             </li>
             <li><a href="#">Página Claudia</a></li>
-            <li><a href="#">Pàgina Mario</a></li>
+            <li><a href="#">Página Mario</a></li>
         </ul>
     </nav>
     </header>
